[package]
name = "mozaic-core"
version = "0.0.0"
authors = ["Ilion Beyst <ilion.beyst@gmail.com>"]
edition = "2018"

[[bin]]
name = "simple_server"

[[bin]]
name = "simple_client"


[dependencies]
futures = { version = "0.3" }
tokio = { version = "0.3", features = ["full"] }
rand = "0.6"
bytes = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio-tungstenite = "0.12"
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }