[package]
name = "mozaic-core"
version = "0.0.0"
authors = ["Ilion Beyst <ilion.beyst@gmail.com>"]
edition = "2018"

[[bin]]
name = "simple_server"

[[bin]]
name = "simple_client"


[dependencies]
futures = { version = "0.3" }
tokio = { version = "0.2", features = ["full"] }
rand = "0.6"
bytes = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.4"
tokio-tungstenite = "0.11"
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
